--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
 
         <section>
             <h2>Our Team</h2>
-            
+            <div>
+                <img src="./images/img.jpg"/>
+            </div>
+            <div>
+                <img src="./images/img (1).jpg"/>
+            </div>
         </section>
         
 </body>
