--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
 
-        <!-- Section 1 -->
+        <!-- Section 2 -->
 
         <section>
             <h2>What Are We Doing</h2>
@@ -69,17 +69,39 @@
             <img src="./images/img 3.jpg"/>
         </section>
 
-        <!-- Section 2 -->
+        <!-- Section 3 -->
 
         <section>
             <h2>Our Team</h2>
             <div>
                 <img src="./images/img.jpg"/>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
             </div>
             <div>
                 <img src="./images/img (1).jpg"/>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </div>
+            <div>
+                <img src="./images/img (2).jpg"/>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </div>
+            <div>
+                <img src="./images/img (3).jpg"/>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
             </div>
         </section>
+
+        <!-- Footer -->
         
+        <section>
+            <div>
+                <h3>WEBSTUDIO</h3>
+                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+        </section>
 </body>
 </html>
