--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <h2>What Are We Doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/Rectangle 71.jpg" width="360" />
+                        <img src="./images/Rectangle 71.jpg" width="360" alt="Web Development"/>
                     </li>
                     <li>
-                        <img src="./images/img 2.jpg" width="360" />
+                        <img src="./images/img 2.jpg" width="360" alt="Mobile Development"/>
                     </li>
                     <li>
-                        <img src="./images/img 3.jpg" width="360" />
+                        <img src="./images/img 3.jpg" width="360" alt="User Interface"/>
                     </li>
                 </ul>
                 
@@ -94,22 +94,22 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./images/img.jpg" width="360" />
+                        <img src="./images/img.jpg" width="360" alt="Mark Guerrero"/>
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/img (1).jpg" width="360" />
+                        <img src="./images/img (1).jpg" width="360" alt="Tom Ford"/>
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/img (2).jpg" width="360" />
+                        <img src="./images/img (2).jpg" width="360" alt="Camila Garcia"/>
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/img (3).jpg" width="360" />
+                        <img src="./images/img (3).jpg" width="360" alt="Daniel Wilson"/>
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
